# fastapi-tutorial

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
api/cruds/: done.py  task.py
api/routers/: done.py  task.py
api/schemas/: task.py
